test/runtime/fail/while/missing_condition.hy

// expect error: Expected operand in expression

while {
	let a = 3
}
